@@ -1,3 +1,8 @@
+2012-08-16  Corinna Vinschen  <corinna@vinschen.de>
+
+	* include/mntent.h: Don't include paths.h and don't define macros if
+	_NOMNTENT_MACROS is set.
+
 2012-08-15  Christopher Faylor  <me.cygwin2012@cgf.cx>
 
 	Rename cancelable_wait -> cygwait throughout.
